fixed h1 style on mobile

--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@
 
 h1 {
 
-    font-size: 4rem;
+    font-size: 3rem;
     text-align: center;
     
     background-color: #E2A25C;
